Testwise enable another mac driver.

--- a/examples/alwm/Makefile
+++ b/examples/alwm/Makefile
@@ -2,6 +2,8 @@ CONTIKI=../..
 
 CONTIKI_WITH_RPL=0
 
+CFLAGS += -DNETSTACK_CONF_MAC=sicslowmac_driver
+
 all: alwm
 
 include $(CONTIKI)/Makefile.include
