--- a/examples/rime-test/Makefile
+++ b/examples/rime-test/Makefile
@@ -4,8 +4,6 @@ CONTIKI_WITH_RPL=0
 CONTIKI_WITH_IPV6=0
 CONTIKI_WITH_RIME=1
 
-#CFLAGS += -DNETSTACK_CONF_MAC=rime_driver
-
-all: alwm
+all: rime-test
 
 include $(CONTIKI)/Makefile.include
