--- a/examples/rime-custom/Makefile
+++ b/examples/rime-custom/Makefile
@@ -1,9 +1,8 @@
-CONTIKI=../..
+CONTIKI = ../..
 
-CONTIKI_WITH_RPL=0
-CONTIKI_WITH_IPV6=0
-CONTIKI_WITH_RIME=1
+all: example-abc example-mesh example-collect example-trickle example-polite \
+     example-rudolph1 example-rudolph2 example-rucb \
+     example-runicast example-unicast example-neighbors
 
-all: rime-test
-
+CONTIKI_WITH_RIME = 1
 include $(CONTIKI)/Makefile.include
